button styles update

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
             <button class="signup-btn">Sign up</button>
-            <button class="login-nav-btn nav-btn">Login</button>
+            <button class="login-nav-btn">Login</button>
+            <p class="login-text">Already have an account?</p>
         </div>
-        <div class="login-page hidden">
-            <button class="signup-nav-btn nav-btn">Sign up</button>
+        <div class="login-page">
+            <button class="signup-nav-btn">Sign up</button>
+            <p class="signup-text">New user?</p>
             <h1 class="login-title">Login</h1>
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
